--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,4 @@
 {
-  "builds": [
-    {
-      "src": "main.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "main.py"
-    }
-  ]
+  "builds": [{ "src": "/server/api.py", "use": "@now/python" }],
+  "routes": [{ "src": "/(.*)", "dest": "server/api.py" }]
 }
